AG-32570: Fix reload icon and option text colors
Merge in EXTENSIONS/vpn-extension from fix/AG-32570 to master

Squashed commit of the following:

commit 90a178b7554d127d3b474ac6bd334dded0bf92d4
Author: Rafkat Galiullin <r.galiullin@adguard.com>
Date:   Wed Oct 30 15:49:35 2024 +0300

    Rename custom var to text-main color

commit e5ab2b46281e126dee99d3ddfefb8dc193cfadc6
Author: Rafkat Galiullin <r.galiullin@adguard.com>
Date:   Wed Oct 30 15:25:30 2024 +0300

    AG-32570: Fix reload icon and option text colors

--- a/src/options/components/ui/Select/select.pcss
+++ b/src/options/components/ui/Select/select.pcss
@@ -75,7 +75,7 @@
         }
 
         &-title {
-            color: var(--gray-base);
+            color: var(--text-main);
             font-size: 1.6rem;
             line-height: 1.6rem;
         }
