--- a/src/options/styles/vars.pcss
+++ b/src/options/styles/vars.pcss
@@ -10,6 +10,7 @@
     --brand-secondary: #4a8b5a;
     --brand-danger: #f56f23;
     --gray-base: #4d4d4d;
+    --text-main: var(--gray-base);
     --green300: rgba(116, 163, 82, 0.05);
     --green700: #74a352;
     --green900: #568040;
@@ -34,6 +35,7 @@
         --white-strong: #000;
         --white-fog: rgba(0, 0, 0, 0.7);
         --gray-base: #d8d8d8;
+        --text-main: #e4e4e4;
         --grayF2: #222222;
         --grayF3: #131313;
         --border-color: #4d4d4d;
@@ -50,6 +52,7 @@
     --white-strong: #000;
     --white-fog: rgba(0, 0, 0, 0.7);
     --gray-base: #d8d8d8;
+    --text-main: #e4e4e4;
     --grayF2: #222222;
     --grayF3: #131313;
     --border-color: #4d4d4d;
@@ -65,6 +68,7 @@
     --white-strong: #fff;
     --white-fog: rgba(255, 255, 255, 0.7);
     --gray-base: #4d4d4d;
+    --text-main: var(--gray-base);
     --grayF2: #f2f2f2;
     --grayF3: #f3f3f3;
     --border-color: #d8d8d8;
